<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_home"
        android:title="@string/halaman_home"
        android:contentDescription="@string/halaman_home"
        />
    <item
        android:id="@+id/tab_create"
        android:icon="@drawable/ic_create"
        android:title="@string/halaman_create"
        android:contentDescription="@string/halaman_create"
        />
    <item
        android:id="@+id/tab_laporan"
        android:icon="@drawable/ic_laporan"
        android:title="@string/halaman_laporan"
        android:contentDescription="@string/halaman_laporan"
        />
    <item
        android:id="@+id/tab_profil"
        android:icon="@drawable/ic_profil"
        android:title="@string/halaman_profil"
        android:contentDescription="@string/halaman_profil"
        />
</menu>
