<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LaporanFragment">

<!--    header:start -->
    <include
        android:id="@+id/header"
        layout="@layout/comp_header_laporan"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintTop_toTopOf="parent"
        />
<!--    header:end -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

<!--        form:start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

<!--            image:start -->
            <ImageView
                android:layout_width="358dp"
                android:layout_height="148dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_tab_indicator"
                android:padding="2dp"
                android:src="@drawable/ic_launcher_foreground" />
<!--            image:end -->

<!--            header:start -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp">
                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="169dp"
                    android:layout_height="36dp"
                    android:text="@string/longsor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/secondary5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
<!--            header:end -->

<!--    desc1:start -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/tanggal"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/primary3"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/penulis"
                    android:textSize="12sp" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/tgl"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/test_nama"
                    android:textSize="16sp" />
            </GridLayout>
<!--    desc1:end -->

<!--    location:start -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/lokasi"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:text="@string/ket_loc"
                    android:textSize="16sp" />
            </LinearLayout>
<!--    location:end -->

<!--    desc2:start -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/kota"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/primary3"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/provinsi"
                    android:textSize="12sp" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ket_city"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/ket_prov"
                    android:textSize="16sp" />
            </GridLayout>
<!--    desc2:end -->

<!--    desc3:start -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/meninggal"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/primary3"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/terluka"
                    android:textSize="12sp" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ket_meninggal"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/ket_luka"
                    android:textSize="16sp" />
            </GridLayout>
<!--    desc3:end -->

<!--    desc4:start -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/hilang"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/primary3"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/rumah"
                    android:textSize="12sp" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ket_hilang"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/ket_rumah"
                    android:textSize="16sp" />
            </GridLayout>
<!--    desc4:end -->

<!--    desc5:start -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/fasilitas"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/primary3"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/terendam"
                    android:textSize="12sp" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ket_fasilitas"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="left"
                    android:text="@string/ket_terendam"
                    android:textSize="16sp" />
            </GridLayout>
<!--    desc5:end -->

<!--    damage:start -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/tingkat"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:text="@string/ket_tingkat"
                    android:textSize="16sp" />
            </LinearLayout>
<!--    damage:end -->

<!--    reason:start -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary3"
                    android:text="@string/penyebab"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:text="@string/ket_sebab"
                    android:textSize="16sp" />
            </LinearLayout>
<!--    reason:end -->

        </LinearLayout>
<!--        form:end -->
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
