<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_parent"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_marginEnd="12dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/foreground"
    app:cardCornerRadius="10dp"
    app:contentPadding="16dp"
    app:strokeColor="@color/primary1"
    app:strokeWidth="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--            card header:start -->
        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/card_title"
            android:textColor="@color/secondary5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_author"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/card_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_date"
            android:textColor="@color/primary1"
            android:textSize="12sp" />
        <!--            card header:end -->

        <!--            card content:start -->
        <TextView
            android:id="@+id/card_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/card_desc"
            android:textColor="@color/primary2" />
        <!--            card content:end-->
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
