<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfilEditFragment">

<!--    header:start -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="24dp"
        android:layout_marginTop="-18dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_navbar">

        <!--    back:start -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_tab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--    back:end-->

        <!--    brand:start-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editProfil"
            android:layout_gravity="center"
            android:textColor="@color/secondary5"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <!--        brand:end -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--        header:end -->

<!--        form:start -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:textColor="@color/secondary5"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent"
            />

<!--        username:start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:layout_marginBottom="2dp"
                />

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/back_username"
                android:background="@color/foreground"
                android:inputType="text"
                />
        </LinearLayout>
<!--        username:end -->

<!--        email:start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_marginBottom="2dp"
                />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/back_email"
                android:background="@color/foreground"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>
<!--        email:end -->

<!--        password:start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textSize="16sp"
                android:layout_marginBottom="2dp"
                />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/back_pass"
                android:background="@color/foreground"
                android:inputType="textPassword"
                />
        </LinearLayout>
<!--        password:end -->

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary5"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:letterSpacing="0.02"
            android:layout_marginBottom="10dp"
            app:cornerRadius="8dp"
            />
    </LinearLayout>
<!--        form:end -->

</androidx.constraintlayout.widget.ConstraintLayout>
